# Trench

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: app.rc
conf/: config.ini  param.json  start.json
docs/: README.md  framework.md
docs/extra/crypto/: DES.md  RSA.md
extra/: CMakeLists.txt
extra/config/: CMakeLists.txt
extra/config/ini/: CMakeLists.txt
extra/config/ini/include/: IniConfig.h
extra/config/ini/src/: IniConfig.cpp
extra/crypto/: CMakeLists.txt
extra/crypto/des/: CMakeLists.txt
extra/crypto/des/include/: des.h  iterate_encrypt.h  secret_key.h  substitution_table.h
extra/crypto/des/src/: crypto.cpp  iterate_encrypt.cpp  secret_key.cpp
extra/crypto/md5/: CMakeLists.txt
extra/crypto/md5/include/: md5.h
extra/crypto/md5/src/: crypto.cpp  md5.cpp
extra/crypto/rsa/: CMakeLists.txt
extra/crypto/rsa/include/: decode.h  encrypt.h  key_pair.h  rsa.h
extra/crypto/rsa/src/: crypto.cpp  decode.cpp  encrypt.cpp  key_pair.cpp  rsa.cpp
extra/structure/: CMakeLists.txt
extra/structure/memory_pool/include/: MemPool.h
extra/structure/memory_pool/src/: MemPool.cpp
extra/structure/stack/: CMakeLists.txt
extra/structure/stack/include/: trench_stack.h
extra/structure/vector/: CMakeLists.txt
extra/structure/vector/include/: trench_vector.h
extra/tools/: CMakeLists.txt
extra/tools/system/: CMakeLists.txt  tools.cpp
extra/tools/system/include/: path.h
extra/tools/system/src/: path.cpp
include/: crypto.h  export.h  test.h
lib/jsoncpp/test/: test.cpp
lib/spdlog/: CMakeLists.txt
lib/spdlog/include/spdlog/: spdlog.h
lib/spdlog/include/spdlog/cfg/: argv.h
libs/: CMakeLists.txt
libs/jsoncpp/: CMakeLists.txt
libs/spdlog/: test.cpp
libs/spdlog/include/spdlog/details/: tcp_client-windows.h
src/: CMakeLists.txt
src/misc/: socket.cpp
src/network/: CMakeLists.txt
test/: CMakeLists.txt  test_cpp.cpp
test/extra/: test_config.cpp  test_crypto.cpp
test/extra/crypto/: test_crypto.cpp  test_des.cpp  test_md5.cpp  test_rsa.cpp
